src/parser_tests/tests_input/unit/bad/Bad63.ty
mutable class PhoneMessageReceiver extends MessageReceiver {
    
    values: {
        messageReceived: String = "You got a new message!";
        messageInvalid: String = "Invalid message";
        maxMessageLength: Int = 100;
        
        notificationChannels: List[NotificationChannel]
    }
    
    variables: {
        messages: List[Message] = List();
    }
    
    functions: {
        private parseMessage: (message: Message) -> String = {
            if (this.validateMessage(message)) then {
                match message {
                    case Email -> "One new email"
                    case Sms -> "One new SMS"
                    case Notification -> "One new notification"
                }
            } else {
                this.messageInvalid
            }
        }
        
        private validateMessage: (message: Message) -> Bool = {
            not message.empty and message.length <= this.maxMessageLength
        }
    }
    
    actions: {
        override receive: (message: Message) -> Bool = {    
            System#printLine(this.messageReceived)
            
            value response: String = this.parseMessage(message);
            System#printLine(response)
            
            if (response != this.messageInvalid) {
                super#receive(message)
                this#messages(this.messages.add(message))
                
                for (channel: NotificationChannel; in this.notificationChannels) {
                    channel#notify(response)
                }
                
                True
            } else {
                False
            }
        }
    }
}
